# pwdh

./: CHANGELOG.md  LICENSE  Readme.md  cabal.project  pwdh.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Lib.hs
test/Src/: LibSpec.hs
