cabal-version:      3.0
name:               pwdh
version:            0.1.0.0
synopsis:           pwdh is pwd.

-- A longer description of the package.
description:        pwdh is pwd written by Haskell.
homepage:           https://github.com/ghsable/pwdh

-- A URL where users can report bugs.
bug-reports:        https://github.com/ghsable/pwdh/issues
license:            BSD3
license-file:       LICENSE
author:             dativus
maintainer:         sn.sable005@gmail.com

-- A copyright notice.
copyright:          2022 (c) dativus
category:           System
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                      directory ^>=1.3.7.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable pwdh
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        pwdh

    hs-source-dirs:   app
    default-language: Haskell2010
