cabal-version:      3.0
name:               pwdh
version:            0.2.1.0
synopsis:           pwdh is pwd.

-- A longer description of the package.
description:        pwdh is pwd written by Haskell.
homepage:           https://github.com/ghsable/pwdh

-- A URL where users can report bugs.
bug-reports:        https://github.com/ghsable/pwdh/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             dativus
maintainer:         sn.sable005@gmail.com

-- A copyright notice.
copyright:          2022 (c) dativus
category:           System
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      directory ^>=1.3.8.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable pwdh
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        pwdh

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite spec
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    build-depends:
        base ^>=4.16.4.0,
        hspec ==2.*,
        directory ^>=1.3.8.1,
        pwdh
    other-modules:
        Src.LibSpec
    build-tool-depends: hspec-discover:hspec-discover ^>=2.11.0.1
    ghc-options:        -Wall
